components/layout/nav/Nav.module.css
#wrapper {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  left: 0px;
  right: 0px;
  padding: 12px 4px 4px 4px;
}

#container {
  display: flex;
  gap: 1rem;
  max-width: var(--navbar-max-width);
}

#home_icon {
  display: flex;
  align-items: center;
  justify-content: center;
}

#aurora {
    position: absolute;
    pointer-events: none;
    display: flex;
    z-index: -1;
    justify-content: center;
    align-items: center;
    inset: 0px;
}

#aurora::before {
  width: 66%;
  height: 180px;
  opacity: 0;
  background-image: linear-gradient(
    135deg,
    #46dcb4 0%,
    #2ab1d9 50%,
    #5469e0 100%
  );
  animation: aurora-gradient-secondary 15s infinite;
  -webkit-animation: aurora-gradient-secondary 15s infinite;
}

#aurora::after {
  width: 100%;
  height: 120px;
  z-index: -1;
  opacity: 0.5;
  background-image: linear-gradient(
    135deg,
    #46dcb4 0%,
    #2ab1d9 50%,
    #5469e0 100%
  );
  animation: aurora-gradient 15s infinite;
  -webkit-animation: aurora-gradient 15s infinite;
}

@keyframes aurora-gradient {
  0% {
    background-image: linear-gradient(
      135deg,
      #46dcb4 0%,
      #2ab1d9 50%,
      #5469e0 100%
    );
    opacity: 0.5;
  }
  16.16% {
    opacity: 0;
  }
  33.33% {
    background-image: linear-gradient(
      135deg,
      #2ab1d9 0%,
      #5469e0 50%,
      #46dcb4 100%
    );
    opacity: 0.5;
  }
  51.49% {
    opacity: 0;
  }
  66.66% {
    background-image: linear-gradient(
      135deg,
      #5469e0 0%,
      #46dcb4 50%,
      #2ab1d9 100%
    );
    opacity: 0.5;
  }
  82.82% {
    opacity: 0;
  }
  100% {
    background-image: linear-gradient(
      135deg,
      #46dcb4 0%,
      #2ab1d9 50%,
      #5469e0 100%
    );
    opacity: 0.5;
  }
}

@keyframes aurora-gradient-secondary {
  0% {
    opacity: 0;
  }
  16.16% {
    background-image: linear-gradient(
      135deg,
      #46dcb4 0%,
      #2ab1d9 50%,
      #5469e0 100%
    );
    opacity: 0.5;
  }
  33.33% {
    opacity: 0;
  }
  51.49% {
    background-image: linear-gradient(
      135deg,
      #2ab1d9 0%,
      #5469e0 50%,
      #46dcb4 100%
    );
    opacity: 0.5;
  }
  66.66% {
    opacity: 0;
  }
  82.82% {
    background-image: linear-gradient(
      135deg,
      #5469e0 0%,
      #46dcb4 50%,
      #2ab1d9 100%
    );
    opacity: 0.5;
  }
  100% {
    opacity: 0;
  }
}

#aurora::before,
#aurora::after {
  content: "";
  /* left: 50%; */
  position: absolute;
  border-radius: 50%;
  pointer-events: none;
  filter: blur(45px);
  -webkit-filter: blur(45px);
  transform: translateZ(0px);
  -webkit-transform: translateZ(0px);
  -moz-transform: translateZ(0px);
  -ms-transform: translateZ(0px);
  -o-transform: translateZ(0px);
}

